# fastapi-user-service

./: .env  .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml  pytest.ini  reviews.txt
.github/workflows/: ci-cd.yaml
app/: config.py  main.py
app/api/endpoints/: __init__.py  catalog.py  reviews.py  user.py
app/catalog/: schemes.py  views.py
app/core/: config.py
app/db/: database.py
app/db/models/: __init__.py  catalog.py  user.py
app/reviews/: views.py
app/src/catalog/: __init__.py
app/src/reviews/: schemes.py
app/src/user/: auth.py  schemes.py  service.py
app/user/: __init__.py  views.py
backend/: Dockerfile
backend/app/: .env.example  .gitignore  .sqlite3
backend/app/app/: main.py
backend/app/app/api/endpoints/: __init__.py  catalog.py  reviews.py  user.py
backend/app/app/core/: config.py
backend/app/app/db/: .sqlite3  database.py
templates/: index.html  reviews.html
user_service/: main.py
user_service/src/api/endpoints/: __init__.py  auth.py  register.py
user_service/src/core/: config.py  exceptions.py  interfaces.py  jwt_token.py  security.py  typing.py
user_service/src/db/: __init__.py  base.py  database.py  manager.py
user_service/src/migrations/: env.py
user_service/src/models/: __init__.py  base.py  user.py
user_service/src/schemes/: __init__.py  base.py  bearer.py  common.py  user.py
user_service/tests/: conftest.py
user_service/tests/api/: test_auth.py  test_register.py
user_service/tests/unit/: test_db.py  test_jwt_token.py  test_security.py  test_user_manager.py
(+4 files in other folders)
