[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["ramb1zzy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "0.115.6"}
poetry = "*"
gunicorn = "*"
aiofiles = "*"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
